--- a/P1/SDLProject/SDLProject.vcxproj.filters
+++ b/P1/SDLProject/SDLProject.vcxproj.filters
@@ -27,4 +27,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="flying bug.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="orange circle.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
